[package]
name = "metric_daemon"
version = "0.2.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"
description = "metric-daemon, a rusty program"

[dependencies]
structopt = "0.3"
anyhow = "1"
color-eyre = "0.5"
tracing-subscriber = "0.2"
ureq = "2.1"
hostname = "0.3"
retry = "1.2"

# other general dependencies
tracing = "0.1"
thiserror = "1.0"
shadow-rs = "0.5"
pretty_assertions = "0.7"


[[bin]]
path = "src/main.rs"
name = "metric_daemon-cli"


[build-dependencies]
shadow-rs = "0.5"
